[UPDATE] Code refactor

--- a/model/dataset/datagen.ipynb
+++ b/model/dataset/datagen.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f43b7667",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
     "        \"avg_task_age_days\": task_age.round(1),\n",
     "        \"overdue_task_ratio\": overdue_ratio.round(2),\n",
     "        \"task_comment_sentiment_mean\": sentiment.round(2),\n",
-    "        \"logged_hours_per_week\": logged_hours.round(1),\n",
+    "        \"logged_hours\": logged_hours.round(1),\n",
     "        \"variance_in_work_hours\": var_hours.round(2),\n",
     "        \"late_start_count_per_week\": late_starts,\n",
     "        \"early_exit_count_per_week\": early_exits,\n",
